# controlled_replay

./: .gitlab-ci.yml  README.md
controlled_replay/: CMakeLists.txt  package.xml
controlled_replay/doc/: arch.drawio  problem.drawio  time_sequence.drawio
controlled_replay/include/controlled_replay/: controlled_replay.h
controlled_replay/src/: Remote.cpp  Remote.h
controlled_replay_example/: CMakeLists.txt  package.xml
controlled_replay_example/script/: record.sh  replay.sh  replay_controlled.sh
controlled_replay_example/src/: Listener.cpp  Listener.h  Talker.cpp  Talker.h
controlled_replay_interfaces/: CMakeLists.txt  package.xml
controlled_replay_interfaces/srv/: PlayNext.srv  Ready.srv
